# butler-engine

./: .gitignore  README.md
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements-lock.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_rls.py
backend/infra/scripts/: seed_demo.py
backend/src/butler/: config.py  main.py
backend/src/butler/api/: authorization.py  deps.py  middleware.py  router_auth.py  router_conversation.py  router_dashboard.py  router_wechat_setup.py  schemas.py
backend/src/butler/documents/: pdf_parser.py
backend/src/butler/engine/: __init__.py  agent_definitions.py  agent_loop.py  agent_runner.py  audit.py  base_tool.py  compact.py  context_builder.py  tool_registry.py
backend/src/butler/memory/: memory_manager.py  memory_types.py  relevance.py
backend/src/butler/models/: __init__.py  base.py  conversation.py  document.py  tenant.py
backend/src/butler/repositories/: __init__.py  conversation_repo.py  tenant_repo.py
backend/src/butler/review/: queue.py  redis_queue.py  router.py
backend/src/butler/services/: anomaly.py  database.py  guard.py  pii_detector.py  redis_client.py  speech.py
backend/src/butler/tenants/: context.py  encryption.py  kms.py  store.py
backend/src/butler/tests/: test_agent_loop.py  test_memory_and_profile.py  test_review_and_safety.py  test_speech.py  test_tools.py  test_wechat.py  test_wechat_e2e.py
backend/src/butler/tools/: __init__.py  check_tax_calendar.py  escalate_to_human.py  generate_report.py  query_assets.py  (+2 more)
(+29 files in other folders)
