[project]
name = "butler-engine"
version = "0.1.0"
description = "High-Net-Worth Private AI Butler — core agent engine"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "anthropic>=0.49",
    "openai>=1.68",            # DeepSeek (OpenAI-compatible)
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "aiosqlite>=0.20",
    "alembic>=1.14",
    "redis[hiredis]>=5.2",
    "arq>=0.26",
    "pycryptodome>=3.21",
    "pdfplumber>=0.11",
    "pyyaml>=6.0",
    "httpx>=0.28",
    "python-multipart>=0.0.18",
    "pyjwt>=2.9",
    "structlog>=24.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "ruff>=0.8",
]

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src/butler/tests"]
